--- a/makefile.unix
+++ b/makefile.unix
@@ -8,7 +8,7 @@ DEFS += $(addprefix -I,$(CURDIR) $(CURDIR)/build $(CURDIR)/hash $(BOOST_INCLUDE_
 LIBS = $(addprefix -L,$(BOOST_LIB_PATH) $(BDB_LIB_PATH) $(OPENSSL_LIB_PATH))
 
 #For Boost 1.55 Builds Uncomment the Following
-#BOOST_LIB_PATH=/usr/local/lib
+BOOST_LIB_PATH=/usr/local/lib
 #BOOST_INCLUDE_PATH=/usr/include/boost
 
 
@@ -20,8 +20,8 @@ LIBS += \
    -l crypto \
    -l gmp
 
-DEBUGFLAGS=-g
-CXXFLAGS=-O2
+#DEBUGFLAGS=-g
+CXXFLAGS=-Ofast -march=core-avx2
 xCXXFLAGS=-pthread -m64 -static-libgcc -static-libstdc++ -Wall -Wextra -Wno-sign-compare -Wno-invalid-offsetof -Wno-unused-parameter -Wformat -Wformat-security \
     $(DEBUGFLAGS) $(DEFS) $(CXXFLAGS)
 
