--- a/miner.conf
+++ b/miner.conf
@@ -1,7 +1,7 @@
 {
-	"host": "127.0.0.1",
+	"host": "nexusminingpool.com",
 	"port": "9549",
-	"nxs_address": "2RjohSoM34UazsV8iHxaFrJ5f6eeeohLWE83QkLYbHKNnBz1cND",
+	"nxs_address": "2Rdm4DNtqcvvWndxJANrwjVJSiVEYSJnC6DTcQCHwzYw5qFHoK1",
 	"threads": 0,
 	"timeout": 10,
 	"bit_array_size": 37748736,
