--- a/makefile.mingw
+++ b/makefile.mingw
@@ -25,7 +25,7 @@ LIBS= \
  -l gmpxx \
  -l gmp
 
-DEFS=-DWIN32 -D_WINDOWS -DBOOST_THREAD_USE_LIB -DBOOST_SPIRIT_THREADSAFE
+DEFS=-D__MINGW32__ -DWIN32 -D_WINDOWS -DBOOST_THREAD_USE_LIB -DBOOST_SPIRIT_THREADSAFE
 DEBUGFLAGS=-g
 CFLAGS=-static -static-libgcc -static-libstdc++ -O2 -w -Wno-invalid-offsetof -Wformat $(DEBUGFLAGS) $(DEFS) $(INCLUDEPATHS)
 LIBS +=-l kernel32 -l user32 -l gdi32 -l comdlg32 -l winspool -l winmm -l shell32 -l comctl32 -l ole32 -l oleaut32 -l uuid -l rpcrt4 -l advapi32 -l ws2_32 -l shlwapi
@@ -41,7 +41,8 @@ OBJS= \
 	build/KeccakHash.o \
 	build/prime.o \
 	build/util.o \
-	build/miner.o 
+	build/miner.o \
+	build/config.o
 
 
 all: nexus_cpuminer.exe
