--- a/PrimePoolMiner.vcxproj
+++ b/PrimePoolMiner.vcxproj
@@ -117,6 +117,7 @@
   <ItemGroup>
     <None Include="build\.gitkeep" />
     <None Include="makefile" />
+    <None Include="miner.conf" />
     <None Include="miner.conf.example" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
