--- a/miner.conf
+++ b/miner.conf
@@ -2,10 +2,10 @@
     "host": "nexusminingpool.com",
     "port": "9549",
     "nxs_address": "2RUpyCM8MSkSWXNLncoCQatKM8xvSvmoyK7gR1MrLDCFoayiLYG",
-    "threads": 1,
+    "threads": 4,
     "timeout": 10,
     "bit_array_size": 5242880,
-    "prime_limit": 71378571,
-    "n_prime_limit": 419430,
+    "prime_limit": 7137857100,
+    "n_prime_limit": 4194304,
     "primorial_end_prime": 12
 }
