Improved sieve & prime test Optimize GPU memory movments New defaults for sieve settings, should improve 5+ chains Move prime test back to g++ (pgpp is slower for GMP)

--- a/miner.conf
+++ b/miner.conf
@@ -1,8 +1,8 @@
 {
-    "host": "nxspool.com",
+    "host": "nexusminingpool.com",
     "port": "9549",
     "nxs_address": "2RUpyCM8MSkSWXNLncoCQatKM8xvSvmoyK7gR1MrLDCFoayiLYG",
-    "threads": 3,
+    "threads": 4,
     "timeout": 10,
     "bit_array_size": 5242880,
     "prime_limit": 7137857100,
