GPU/CPU sieve, makefile, config improvements. - Fix GPU sieve to reduce the race condition when multiple threads trying to change a bit on the same byte position. - Improved makefile to compile without PGI (make PGI=) and also cygwin. - Add VSCode build and debug support for cygwin - Sieve and prime test thread numbers can be specified separately in the config file or executable parameters - Additonal status info. Most important is the  Total Share Value submitted to the pool and Share Value per hour which after all is directly related how the pool rewards the work from the miner. - Started to add support to work also as a solo miner.

--- a/miner.conf
+++ b/miner.conf
@@ -2,8 +2,9 @@
     "host": "nexusminingpool.com",
     "port": "9549",
     "nxs_address": "2RUpyCM8MSkSWXNLncoCQatKM8xvSvmoyK7gR1MrLDCFoayiLYG",
-    "threads": 4,
-    "timeout": 10,
+    "sieve_threads": 1,
+    "ptest_threads": 4,
+    "timeout": 5,
     "bit_array_size": 5242880,
     "prime_limit": 7137857100,
     "n_prime_limit": 4194304,
