--- a/miner.conf.example
+++ b/miner.conf.example
@@ -2,7 +2,8 @@
 	"host": "",
 	"port": "9549",
 	"nxs_address": "",
-	"threads": 0,
+    "sieve_threads": 0,
+    "ptest_threads": 0,
 	"timeout": 10,
 	"bit_array_size": 37748736,
 	"prime_limit": 71378571,
