--- a/PrimePoolMiner.vcxproj.filters
+++ b/PrimePoolMiner.vcxproj.filters
@@ -33,26 +33,26 @@
     <ClCompile Include="util.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="hash\skein.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="hash\skein_block.cpp">
-      <Filter>hash</Filter>
-    </ClCompile>
-    <ClCompile Include="hash\KeccakSponge.c">
-      <Filter>hash</Filter>
-    </ClCompile>
-    <ClCompile Include="hash\KeccakHash.c">
-      <Filter>hash</Filter>
-    </ClCompile>
-    <ClCompile Include="hash\KeccakDuplex.c">
-      <Filter>hash</Filter>
-    </ClCompile>
-    <ClCompile Include="hash\Keccak-compact64.c">
       <Filter>hash</Filter>
     </ClCompile>
     <ClCompile Include="oacc\AccSieve.cpp">
       <Filter>oacc</Filter>
+    </ClCompile>
+    <ClCompile Include="hash\KeccakHash.cpp">
+      <Filter>hash</Filter>
+    </ClCompile>
+    <ClCompile Include="hash\KeccakSponge.cpp">
+      <Filter>hash</Filter>
+    </ClCompile>
+    <ClCompile Include="hash\KeccakDuplex.cpp">
+      <Filter>hash</Filter>
+    </ClCompile>
+    <ClCompile Include="hash\Keccak-compact64.cpp">
+      <Filter>hash</Filter>
+    </ClCompile>
+    <ClCompile Include="hash\skein.cpp">
+      <Filter>hash</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -71,44 +71,44 @@
     <ClInclude Include="util.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="hash\brg_endian.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="hash\brg_types.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="hash\crypto_hash.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="hash\KeccakDuplex.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="hash\KeccakF-1600-interface.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="hash\KeccakHash.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="hash\KeccakSponge.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="hash\skein.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="hash\skein_iv.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="hash\skein_port.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="hash\templates.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="hash\uint1024.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="oacc\AccSieve.h">
       <Filter>oacc</Filter>
+    </ClInclude>
+    <ClInclude Include="hash\skein.h">
+      <Filter>hash</Filter>
+    </ClInclude>
+    <ClInclude Include="hash\uint1024.h">
+      <Filter>hash</Filter>
+    </ClInclude>
+    <ClInclude Include="hash\templates.h">
+      <Filter>hash</Filter>
+    </ClInclude>
+    <ClInclude Include="hash\skein_port.h">
+      <Filter>hash</Filter>
+    </ClInclude>
+    <ClInclude Include="hash\skein_iv.h">
+      <Filter>hash</Filter>
+    </ClInclude>
+    <ClInclude Include="hash\brg_types.h">
+      <Filter>hash</Filter>
+    </ClInclude>
+    <ClInclude Include="hash\brg_endian.h">
+      <Filter>hash</Filter>
+    </ClInclude>
+    <ClInclude Include="hash\KeccakF-1600-interface.h">
+      <Filter>hash</Filter>
+    </ClInclude>
+    <ClInclude Include="hash\KeccakDuplex.h">
+      <Filter>hash</Filter>
+    </ClInclude>
+    <ClInclude Include="hash\crypto_hash.h">
+      <Filter>hash</Filter>
+    </ClInclude>
+    <ClInclude Include="hash\KeccakSponge.h">
+      <Filter>hash</Filter>
+    </ClInclude>
+    <ClInclude Include="hash\KeccakHash.h">
+      <Filter>hash</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
