--- a/miner.conf.solo.example
+++ b/miner.conf.solo.example
@@ -1,7 +1,7 @@
 {
-    "host": "nexusminingpool.com",
-    "port": "9549",
-    "nxs_address": "2RUpyCM8MSkSWXNLncoCQatKM8xvSvmoyK7gR1MrLDCFoayiLYG",
+    "host": "localhost",
+    "port": "9325",
+    "nxs_address": "",
     "sieve_threads": 0,
     "ptest_threads": 0,
     "timeout": 5,
