Fix sieve and prime test thread numbers in the example batch files.

--- a/PrimePoolMiner.vcxproj
+++ b/PrimePoolMiner.vcxproj
@@ -120,6 +120,8 @@
     <None Include="makefile" />
     <None Include="miner.conf" />
     <None Include="miner.conf.example" />
+    <None Include="soloMining.bat" />
+    <None Include="soloMining.sh" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
