Added an experimental sieve that should improve the rate of longer prime chains while the rate of the short chains is significantly lower. The new experimental sieve can be switched on or off using the miner.config. The sieve parameters of the new experimental sieve are hard coded in the prime.cpp Under windows (cygwin build) disabled the balance/payout query from the pool and PPS\WPS submission to the pool, because it's related to the random crashing of the miner.

--- a/PrimePoolMiner.vcxproj
+++ b/PrimePoolMiner.vcxproj
@@ -80,6 +80,13 @@
     <RemoteBuildOutputs>$(RemoteProjectDir)/nexus_cpuminer</RemoteBuildOutputs>
     <LocalRemoteCopySources>true</LocalRemoteCopySources>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <NMakeIncludeSearchPath>C:\deps62\gmp-6.1.1\;c:\deps62\boost_1_62_0</NMakeIncludeSearchPath>
+    <RemoteBuildCommandLine>cd $(RemoteProjectDir);make -f $(RemoteProjectDir)/makefile -j8</RemoteBuildCommandLine>
+    <RemoteReBuildCommandLine>cd $(RemoteProjectDir);make -f $(RemoteProjectDir)/makefile clean;make -f $(RemoteProjectDir)/makefile -j8</RemoteReBuildCommandLine>
+    <RemoteCleanCommandLine>cd $(RemoteProjectDir);make -f $(RemoteProjectDir)/makefile clean</RemoteCleanCommandLine>
+    <RemoteBuildOutputs>$(RemoteProjectDir)/nexus_cpuminer</RemoteBuildOutputs>
+  </PropertyGroup>
   <ItemDefinitionGroup>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -116,10 +123,12 @@
     <ClInclude Include="util.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="build.sh" />
     <None Include="build\.gitkeep" />
     <None Include="makefile" />
     <None Include="miner.conf">
-      <RemoteCopyFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</RemoteCopyFile>
+      <RemoteCopyFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</RemoteCopyFile>
+      <RemoteCopyFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</RemoteCopyFile>
     </None>
     <None Include="miner.conf.example" />
     <None Include="soloMining.bat" />
