--- a/miner.conf
+++ b/miner.conf
@@ -1,6 +1,6 @@
 {
     "host": "nexusminingpool.com",
-    "port": "9549",
+    "port": "9550",
     "nxs_address": "2RUpyCM8MSkSWXNLncoCQatKM8xvSvmoyK7gR1MrLDCFoayiLYG",
     "sieve_threads": 0,
     "ptest_threads": 0,
@@ -8,5 +8,6 @@
     "bit_array_size": 8388608,
     "prime_limit": 7137857100,
     "n_prime_limit": 81920,
-    "primorial_end_prime": 12
+    "primorial_end_prime": 12,
+    "experimental" : "true"
 }
