--- a/makefile.mingw
+++ b/makefile.mingw
@@ -6,28 +6,27 @@
 INCLUDEPATHS= \
  -I"$(CURDIR)" \
  -I"$(CURDIR)\hash" \
- -I"C:\Deps\boost_1_55_0" \
- -I"C:\Deps\openssl-1.0.1h\include" \
- -I"C:\Deps\GMP\include"
+ -I"C:\Deps\boost-1_68" \
+ -I"C:\deps\include" \
+ -I"/usr/include"
 
 LIBPATHS= \
- -L"C:\Deps\boost_1_55_0\stage\lib" \
- -L"C:\Deps\openssl-1.0.1h" \
- -L"C:\Deps\GMP\lib" 
+ -L"C:\deps\lib" \
+ -L"/usr/lib"
 
 LIBS= \
- -l boost_system-mgw49-mt-s-1_55 \
- -l boost_filesystem-mgw49-mt-s-1_55 \
- -l boost_program_options-mgw49-mt-s-1_55 \
- -l boost_thread-mgw49-mt-s-1_55 \
+ -l boost_system-mgw82-mt-s-x64-1_68 \
+ -l boost_filesystem-mgw82-mt-s-x64-1_68 \
+ -l boost_program_options-mgw82-mt-s-x64-1_68 \
+ -l boost_thread-mgw82-mt-s-x64-1_68 \
  -l ssl \
  -l crypto \
  -l gmpxx \
  -l gmp
 
-DEFS=-D__MINGW32__ -DWIN32 -D_WINDOWS -DBOOST_THREAD_USE_LIB -DBOOST_SPIRIT_THREADSAFE
+DEFS=-D__MINGW32__ -DWIN32 -D_WINDOWS -DBOOST_THREAD_USE_LIB -DBOOST_SPIRIT_THREADSAFE -DHAVE__ALIGNED_MALLOC
 DEBUGFLAGS=-g
-CFLAGS=-static -static-libgcc -static-libstdc++ -O2 -w -Wno-invalid-offsetof -Wformat $(DEBUGFLAGS) $(DEFS) $(INCLUDEPATHS)
+CFLAGS=-static -static-libgcc -std=c++11 -static-libstdc++ -O2 -w -Wno-invalid-offsetof -Wformat $(DEBUGFLAGS) $(DEFS) $(INCLUDEPATHS)
 LIBS +=-l kernel32 -l user32 -l gdi32 -l comdlg32 -l winspool -l winmm -l shell32 -l comctl32 -l ole32 -l oleaut32 -l uuid -l rpcrt4 -l advapi32 -l ws2_32 -l shlwapi
 
 HEADERS = $(wildcard *.h)
